create player form and play list delete option

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<base href="/a1sports-admin/">
-	<!-- <script> document.write('<base href="' + document.location + '" />'); </script> -->
+	<!-- <base href="/"> -->
+	<script> document.write('<base href="' + document.location + '" />'); </script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 	<title>A1Sports</title>
@@ -24,6 +24,6 @@
 			</div>
 		</app-root>
 	</div>
-<script src="runtime.390f7e8cb73a5f8e7cbe.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.bdc46e2aed93c80b1464.js" defer></script></body>
+<script src="runtime.0745a8463b84c3c42588.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.d658c8b565c62adcb42f.js" defer></script></body>
 
 </html>
