--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<!-- <base href="/"> -->
-	<script> document.write('<base href="' + document.location + '" />'); </script>
+	<base href="sportyfy.io/a1sports-admin">
+	<!-- <script> document.write('<base href="' + document.location + '" />'); </script> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 	<title>A1Sports</title>
