--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 			</div>
 		</app-root>
 	</div>
-<script src="/runtime.0745a8463b84c3c42588.js" defer></script><script src="/polyfills.b8d39f7786420e8d2420.js" defer></script><script src="/main.d658c8b565c62adcb42f.js" defer></script></body>
+<script src="runtime.0745a8463b84c3c42588.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.d658c8b565c62adcb42f.js" defer></script></body>
 
 </html>
