--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="description" content="">
-	<meta name="author" content="">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 	<!-- <base href="/a1sports-admin"> -->
 	<script> document.write('<base href="' + document.location + '" />'); </script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
-	<title>A1Sports</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="styles.f48b44b2d471a9530b29.css"></head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
+    <title>A1 Sports Exchange</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="styles.f48b44b2d471a9530b29.css"></head>
 
-<body class="animated fadeInDown editor desktop-detected minified">
-	<div class="mat-app-background basic-container">
-		<router-outlet></router-outlet>
-		<app-root>
-			<div class="spinner">
-				<div class="bounce1"></div>
-				<div class="bounce2"></div>
-				<div class="bounce3"></div>
-			</div>
-		</app-root>
-	</div>
-<script src="runtime.0745a8463b84c3c42588.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.d658c8b565c62adcb42f.js" defer></script></body>
-
+  <body class="animated fadeInDown editor desktop-detected minified">
+    <div class="mat-app-background basic-container">
+      <router-outlet></router-outlet>
+      <app-root>
+        <div class="spinner">
+          <div class="bounce1"></div>
+          <div class="bounce2"></div>
+          <div class="bounce3"></div>
+        </div>
+      </app-root>
+    </div>
+  <script src="runtime.741d19eaf3809687769d.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.c6f69132460166c30ffc.js" defer></script></body>
 </html>
