updated api endpoint, updated index.html base href for deployment

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-	<!-- <base href="/a1sports-admin"> -->
-	<script> document.write('<base href="' + document.location + '" />'); </script>
+    <!-- <base href="/" /> -->
+    <script>
+      document.write('<base href="' + document.location + '" />');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <title>A1 Sports Exchange</title>
@@ -23,5 +25,5 @@
         </div>
       </app-root>
     </div>
-  <script src="runtime.7956231d093d6c498562.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.ee3be004cb8ce1a81e44.js" defer></script></body>
+  <script src="runtime.7956231d093d6c498562.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.b061e51f62028b704d84.js" defer></script></body>
 </html>
