ticker, scheduler, expert page and functionality

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <!-- <base href="/" /> -->
-    <script>
+    <base href="/" />
+    <!-- <script>
       document.write('<base href="' + document.location + '" />');
-    </script>
+    </script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
-    <title>A1 Sports Exchange</title>
+    <title>A1 Sports</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="styles.136839ee8a11f15152b0.css"></head>
+  <link rel="stylesheet" href="styles.b65a10e565a822aa259e.css"></head>
 
   <body class="animated fadeInDown editor desktop-detected minified">
     <div class="mat-app-background basic-container">
@@ -25,5 +25,5 @@
         </div>
       </app-root>
     </div>
-  <script src="runtime.7956231d093d6c498562.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.b061e51f62028b704d84.js" defer></script></body>
+  <script src="runtime.a01f53e87ec206ddfda1.js" defer></script><script src="polyfills.b8d39f7786420e8d2420.js" defer></script><script src="main.928a7c824e522b9aecf1.js" defer></script></body>
 </html>
